--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20221012~sparky7~0 (2022-10-12)
+-------------------------------------------------------------------------------
+  * added package le
+  * changed virtualbox-6.1 to virtualbox-7.0
+
+-------------------------------------------------------------------------------
   Version 20220928~sparky7~0 (2022-09-28)
 -------------------------------------------------------------------------------
   * added packages kitty, lollypop, iron arm64, compiz, amberol
