--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20230108~sparky6~0 (2023-01-08)
+-------------------------------------------------------------------------------
+  * added packages tokodon, shellinabox, haruna, sc-controller, harmonoid
+
+-------------------------------------------------------------------------------
   Version 20221112~sparky6~0 (2022-11-12)
 -------------------------------------------------------------------------------
   * added packages onedrive, zfsutils-linux, ne, nedit, nvi, blisk-browser-stable, mullwad-vpn arm64
