--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20230108~sparky7~0 (2023-01-08)
+-------------------------------------------------------------------------------
+  * added packages tokodon, shellinabox, haruna, sc-controller, harmonoid
+  * install linux-image-sparky7-amd64 instead of linux-image-sparky-amd64
+  * removed packages pysolfc, freespace2, ember-media, lostirc, freelan, sshoot
+
+-------------------------------------------------------------------------------
   Version 20221112~sparky7~0 (2022-11-12)
 -------------------------------------------------------------------------------
   * added packages onedrive, zfsutils-linux, ne, nedit, nvi, blisk-browser-stable, mullwad-vpn arm64, clapper
