--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20230202~sparky7~0 (2023-02-02)
+-------------------------------------------------------------------------------
+  * added uk_UA locale
+
+-------------------------------------------------------------------------------
   Version 20230108~sparky7~0 (2023-01-08)
 -------------------------------------------------------------------------------
   * added packages tokodon, shellinabox, haruna, sc-controller, harmonoid
