--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230220~sparky6~0 (2023-02-20)
+-------------------------------------------------------------------------------
+  * added packages brave-browser arm64, heroic, olive-editor, nix, cavezofphear
+  * removed package ventoy-gui
+
+-------------------------------------------------------------------------------
   Version 20230202~sparky6~0 (2023-02-02)
 -------------------------------------------------------------------------------
   * added uk_UA locale
