--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230306~sparky7~0 (2023-03-06)
+-------------------------------------------------------------------------------
+  * added package kakoune
+  * removed packages adapta-gtk-theme, amule, freelan
+
+-------------------------------------------------------------------------------
   Version 20230220~sparky7~0 (2023-02-20)
 -------------------------------------------------------------------------------
   * added packages brave-browser arm64, heroic, olive-editor, nix, risup-vpn all, cavezofphear
