--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230324~sparky6~0 (2023-03-24)
+-------------------------------------------------------------------------------
+  * added packages kakoune, blueman, kephra
+  * added debian backports kernel installation
+
+-------------------------------------------------------------------------------
   Version 20230220~sparky6~0 (2023-02-20)
 -------------------------------------------------------------------------------
   * added packages brave-browser arm64, heroic, olive-editor, nix, cavezofphear
