--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230324~sparky7~0 (2023-03-24)
+-------------------------------------------------------------------------------
+  * added packages blueman, l3afpad, kephra
+  * added Debian rt kernel installation
+
+-------------------------------------------------------------------------------
   Version 20230306~sparky7~0 (2023-03-06)
 -------------------------------------------------------------------------------
   * added package kakoune
