--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230429~sparky6~0 (2023-04-29)
+-------------------------------------------------------------------------------
+  * added packages appimagelauncher, mullvad-browser, youtube-dl-gui, lite-xl
+  * removed packages cyberfox, lite-editor
+
+-------------------------------------------------------------------------------
   Version 20230324~sparky6~0 (2023-03-24)
 -------------------------------------------------------------------------------
   * added packages kakoune, blueman, kephra
