--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230530~sparky6~0 (2023-05-30)
+-------------------------------------------------------------------------------
+  * added packages icecat arm64, element-desktop arm64, scrcpy
+  * install openoffice from sparky repos
+
+-------------------------------------------------------------------------------
   Version 20230429~sparky6~0 (2023-04-29)
 -------------------------------------------------------------------------------
   * added packages appimagelauncher, mullvad-browser, youtube-dl-gui, lite-xl
