--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20230705~sparky7~0 (2023-07-05)
+-------------------------------------------------------------------------------
+  * changed trinity desktop repo from testing to stable
+
+-------------------------------------------------------------------------------
   Version 20230624~sparky7~0 (2023-06-24)
 -------------------------------------------------------------------------------
   * added packages xdman, pulsar
