--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20230705~sparky8~0 (2023-07-05)
+-------------------------------------------------------------------------------
+  * changed trinity repo from bookworm to trixie
+
+-------------------------------------------------------------------------------
   Version 20230624~sparky8~0 (2023-06-24)
 -------------------------------------------------------------------------------
   * added packages xdman, pulsar
