--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20230707~sparky7~0 (2023-07-07)
+-------------------------------------------------------------------------------
+  * added packages pasystray, pnmixer, pamixer, pamix, rexima, vimix, voctomix, volumeicon-alsa
+
+-------------------------------------------------------------------------------
   Version 20230705~sparky7~0 (2023-07-05)
 -------------------------------------------------------------------------------
   * changed trinity desktop repo from testing to stable
