--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230707~sparky8~0 (2023-07-07)
+-------------------------------------------------------------------------------
+  * added Sparky Linux kernel 6.1 LTS installation
+  * added packages pasystray, pnmixer, pamixer, pamix, rexima, vimix, voctomix, volumeicon-alsa
+
+-------------------------------------------------------------------------------
   Version 20230705~sparky8~0 (2023-07-05)
 -------------------------------------------------------------------------------
   * changed trinity repo from bookworm to trixie
