--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20230802~sparky6~0 (2023-08-02)
+-------------------------------------------------------------------------------
+  * removed sparky unstable repo from sparky kernel installation
+
+-------------------------------------------------------------------------------
   Version 20230624~sparky6~0 (2023-06-24)
 -------------------------------------------------------------------------------
   * removed sparky linux kernel 4.9 lts installation
