--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230802~sparky7~0 (2023-08-02)
+-------------------------------------------------------------------------------
+  * added packages teams-for-linux, httrack
+  * removed sparky unstable repo from sparky kernel installation
+
+-------------------------------------------------------------------------------
   Version 20230707~sparky7~0 (2023-07-07)
 -------------------------------------------------------------------------------
   * added packages pasystray, pnmixer, pamixer, pamix, rexima, vimix, voctomix, volumeicon-alsa
