--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20230905~sparky7~0 (2023-09-05)
+-------------------------------------------------------------------------------
+  * added packages chroma, chromono, rpi-imager, eggs
+  * small fixes
+
+-------------------------------------------------------------------------------
   Version 20230802~sparky7~0 (2023-08-02)
 -------------------------------------------------------------------------------
   * added packages teams-for-linux, httrack
