--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20231008~sparky7~0 (2023-10-08)
+-------------------------------------------------------------------------------
+  * added packages tilde, onionmediax, onionbalance, onioncircuits, onionprobe, onionshare-cli
+  * install eggs on arm64 and i386 too
+
+-------------------------------------------------------------------------------
   Version 20230905~sparky7~0 (2023-09-05)
 -------------------------------------------------------------------------------
   * added packages chroma, chromono, rpi-imager, eggs
