--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20231017~sparky6~0 (2023-10-17)
+-------------------------------------------------------------------------------
+  * fixed xanmod kernel installation
+
+-------------------------------------------------------------------------------
   Version 20230802~sparky6~0 (2023-08-02)
 -------------------------------------------------------------------------------
   * removed sparky unstable repo from sparky kernel installation
