--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20231017~sparky8~0 (2023-10-17)
+-------------------------------------------------------------------------------
+  * fixed xanmod kernel installation
+  * install teamviewer on all archs
+
+-------------------------------------------------------------------------------
   Version 20231008~sparky8~0 (2023-10-08)
 -------------------------------------------------------------------------------
   * added packages tilde, onionmediax, onionbalance, onioncircuits, onionprobe, onionshare-cli
