--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------------------
+  Version 20231202~sparky8~0 (2023-12-02)
+-------------------------------------------------------------------------------
+  * added packages spectrum, anydesk armhf, whatsapp-for-linux
+  * removed packages beaker, lxdm, oregano, gbrainy, seahorse-adventures, xscorch, blastem, gtick, hiero, cpufrequtils
+  * added i386 arch config to install steam on other platforms
+  * changed apcalc to calc
+
+-------------------------------------------------------------------------------
   Version 20231017~sparky8~0 (2023-10-17)
 -------------------------------------------------------------------------------
   * fixed xanmod kernel installation
