--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20231219~sparky7~0 (2023-12-19)
+-------------------------------------------------------------------------------
+  * added packages dooble, qt5ct, qt6ct, mlvwm desktop
+
+-------------------------------------------------------------------------------
   Version 20231202~sparky7~0 (2023-12-02)
 -------------------------------------------------------------------------------
   * added packages spectrum, anydesk armhf, whatsapp-for-linux
