--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20231219~sparky8~0 (2023-12-19)
+-------------------------------------------------------------------------------
+  * added packages dooble, qt5ct, qt6ct, mlvwm desktop
+  * removed packages viper-browser
+  * use nala if installed, instead of apt
+
+-------------------------------------------------------------------------------
   Version 20231202~sparky8~0 (2023-12-02)
 -------------------------------------------------------------------------------
   * added packages spectrum, anydesk armhf, whatsapp-for-linux
