--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20240114~sparky7~0 (2024-01-14)
+-------------------------------------------------------------------------------
+  * added package gnome-commander
+  * changed woeusb to woeusb-ng, updated hu locales
+
+-------------------------------------------------------------------------------
   Version 20231219~sparky7~0 (2023-12-19)
 -------------------------------------------------------------------------------
   * added packages dooble, qt5ct, qt6ct, mlvwm desktop
