--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20240208~sparky8~0 (2024-02-08)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20240207~sparky8~0 (2024-02-07)
 -------------------------------------------------------------------------------
   * added packages thorium-browser, mercury-browser, waterfox-kde, added linux-image-sparky8-lts66-amd64
