--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20240208~sparky6~0 (2024-02-08)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20231017~sparky6~0 (2023-10-17)
 -------------------------------------------------------------------------------
   * fixed xanmod kernel installation
