--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20240209~sparky7~0 (2024-02-09)
+-------------------------------------------------------------------------------
+  * changed yad close window to kill pid
+  * added thorium and mercury browsers arm64
+
+-------------------------------------------------------------------------------
   Version 20240208~sparky7~0 (2024-02-08)
 -------------------------------------------------------------------------------
   * small fix
