--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20240209~sparky8~0 (2024-02-09)
+-------------------------------------------------------------------------------
+  * changed yad close window to kill pid
+  * added thorium and mercury browsers arm64
+  * fixed first zenity window of refreshing package list
+
+-------------------------------------------------------------------------------
   Version 20240208~sparky8~0 (2024-02-08)
 -------------------------------------------------------------------------------
   * small fix
