--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20240210~sparky6~0 (2024-02-10)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20240208~sparky6~0 (2024-02-08)
 -------------------------------------------------------------------------------
   * small fix
