--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20240210~sparky7~0 (2024-02-10)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20240209~sparky7~0 (2024-02-09)
 -------------------------------------------------------------------------------
   * changed yad close window to kill pid
