--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,14 @@
 -------------------------------------------------------------------------------
+  Version 20240210~sparky8~0 (2024-02-10)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
+  Version 20240209.1~sparky8~0 (2024-02-09)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20240209~sparky8~0 (2024-02-09)
 -------------------------------------------------------------------------------
   * changed yad close window to kill pid
