--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20240304~sparky7~0 (2024-03-04)
+-------------------------------------------------------------------------------
+  * added packages cpufetch, neofetch, barnowl, errbot, eliza, noi, xymon, icinga2
+  * added new subcategory chatbot
+
+-------------------------------------------------------------------------------
   Version 20240210~sparky7~0 (2024-02-10)
 -------------------------------------------------------------------------------
   * small fix
