--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20240304~sparky8~0 (2024-03-04)
+-------------------------------------------------------------------------------
+  * added packages cpufetch, neofetch, barnowl, errbot, eliza, noi, xymon, icinga2, hyfetch, neowofetch, imaginer
+  * added new subcategory chatbot
+
+-------------------------------------------------------------------------------
   Version 20240210~sparky8~0 (2024-02-10)
 -------------------------------------------------------------------------------
   * small fix
