--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20240307~sparky8~0 (2024-03-07)
+-------------------------------------------------------------------------------
+  * small fix
+  
+-------------------------------------------------------------------------------
   Version 20240304~sparky8~0 (2024-03-04)
 -------------------------------------------------------------------------------
   * added packages cpufetch, neofetch, barnowl, errbot, eliza, noi, xymon, icinga2, hyfetch, neowofetch, imaginer
