--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20240307~sparky7~0 (2024-03-07)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20240304~sparky7~0 (2024-03-04)
 -------------------------------------------------------------------------------
   * added packages cpufetch, neofetch, barnowl, errbot, eliza, noi, xymon, icinga2
