--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20240402~sparky8~0 (2024-04-02)
+-------------------------------------------------------------------------------
+  * added packages foliate, koodo-reader, xzoom, obs-studio, freetube
+  * fixed gnome installation
+
+-------------------------------------------------------------------------------
   Version 20240307~sparky8~0 (2024-03-07)
 -------------------------------------------------------------------------------
   * small fix
