--- a/6/CHANGELOG
+++ b/6/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20240402~sparky6~0 (2024-04-02)
+-------------------------------------------------------------------------------
+  * fixed gnome installation
+
+-------------------------------------------------------------------------------
   Version 20240210~sparky6~0 (2024-02-10)
 -------------------------------------------------------------------------------
   * small fix
