--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20240601~sparky7~0 (2024-06-01)
+-------------------------------------------------------------------------------
+  * added packages veracrypt-console, thorium-browser i386
+  * removed vmplayer-installer
+  * added Debian backport kernels 64bit, 64bit RT, 686-pae, 686-pae RT, 686 non-pae
+
+-------------------------------------------------------------------------------
   Version 20240504~sparky7~0 (2024-05-04)
 -------------------------------------------------------------------------------
   * updated es_AR locale
