--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20240601~sparky8~0 (2024-06-01)
+-------------------------------------------------------------------------------
+  * added packages veracrypt-console, thorium-browser i386
+  * removed vmplayer-installer
+  
+-------------------------------------------------------------------------------
   Version 20240504~sparky8~0 (2024-05-04)
 -------------------------------------------------------------------------------
   * updated es_AR locale
