--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20240701~sparky7~0 (2024-07-01)
+-------------------------------------------------------------------------------
+  * added package finch
+  * removed packages eggs, skype-for-linux
+  * changed softmaker-freeoffice-2021 to softmaker-freeoffice-2024
+
+-------------------------------------------------------------------------------
   Version 20240601~sparky7~0 (2024-06-01)
 -------------------------------------------------------------------------------
   * added packages veracrypt-console, thorium-browser i386
