--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20240810~sparky7~0 (2024-08-10)
+-------------------------------------------------------------------------------
+  * added packages peazip, zed
+  * removed package next
+  * added fi locale
+
+-------------------------------------------------------------------------------
   Version 20240701~sparky7~0 (2024-07-01)
 -------------------------------------------------------------------------------
   * added package finch
