--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20240916~sparky8~0 (2024-09-16)
+-------------------------------------------------------------------------------
+  * added fi locale
+  * changed virtualbox 7.0 to 7.1
+  * removed vmware-installer dependency
+
+-------------------------------------------------------------------------------
   Version 20240810~sparky8~0 (2024-08-10)
 -------------------------------------------------------------------------------
   * added packages peazip, zed
