--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20240916~sparky7~0 (2024-09-16)
+-------------------------------------------------------------------------------
+  * added fi locale
+  * changed virtualbox 7.0 to 7.1
+  * removed vmware-installer dependency
+
+-------------------------------------------------------------------------------
   Version 20240810~sparky7~0 (2024-08-10)
 -------------------------------------------------------------------------------
   * added packages peazip, zed
