--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20241105~sparky7~0 (2024-11-05)
+-------------------------------------------------------------------------------
+  * changed whatsapp-for-linux to wasistlos
+  * added packages librewolf arm64, simplenote, floorp
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20240916~sparky7~0 (2024-09-16)
 -------------------------------------------------------------------------------
   * added fi locale
