--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20241231~sparky7~0 (2024-12-31)
+-------------------------------------------------------------------------------
+  * added package zen-browser
+
+-------------------------------------------------------------------------------
   Version 20241105~sparky7~0 (2024-11-05)
 -------------------------------------------------------------------------------
   * changed whatsapp-for-linux to wasistlos
