--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20241231~sparky8~0 (2024-12-31)
+-------------------------------------------------------------------------------
+  * added package zen-browser
+  * removed package stremio
+
+-------------------------------------------------------------------------------
   Version 20241105~sparky8~0 (2024-11-05)
 -------------------------------------------------------------------------------
   * changed whatsapp-for-linux to wasistlos
