--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20250302~sparky7~0 (2025-03-02)
+-------------------------------------------------------------------------------
+  * added packages focuswriter, ayugram, fagram, linux kernel 6.12LTS
+  * removed package linux kernel 5.15LTS
+
+-------------------------------------------------------------------------------
   Version 20241231~sparky7~0 (2024-12-31)
 -------------------------------------------------------------------------------
   * added package zen-browser
