--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20250305~sparky8~0 (2025-03-05)
+-------------------------------------------------------------------------------
+  * small fix
+
+-------------------------------------------------------------------------------
   Version 20250302~sparky8~0 (2025-03-02)
 -------------------------------------------------------------------------------
   * added packages focuswriter, ayugram, fagram, linux kernel 6.12LTS
