--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20250406~sparky7~0 (2025-04-06)
+-------------------------------------------------------------------------------
+  * added packages mangler, materialgram, gnome-text-editor
+
+-------------------------------------------------------------------------------
   Version 20250302~sparky7~0 (2025-03-02)
 -------------------------------------------------------------------------------
   * added packages focuswriter, ayugram, fagram, linux kernel 6.12LTS
