--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20250406~sparky8~0 (2025-04-06)
+-------------------------------------------------------------------------------
+  * added packages mangler, materialgram, gnome-text-editor
+  * removed draco-desktop, linux kernel 6.1-lts
+
+-------------------------------------------------------------------------------
   Version 20250305~sparky8~0 (2025-03-05)
 -------------------------------------------------------------------------------
   * small fix
