--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20250504~sparky7~0 (2025-05-04)
+-------------------------------------------------------------------------------
+  * added package package elecwhat
+  * fixed protonvpn installation
+  * added aptitude to package clean
+
+-------------------------------------------------------------------------------
   Version 20250406~sparky7~0 (2025-04-06)
 -------------------------------------------------------------------------------
   * added packages mangler, materialgram, gnome-text-editor
