--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 20250525~sparky8~0 (2025-05-25)
+-------------------------------------------------------------------------------
+  * changed sparky kernel installation suffix from sparky8 to sparky
+
+-------------------------------------------------------------------------------
   Version 20250504~sparky8~0 (2025-05-04)
 -------------------------------------------------------------------------------
   * added packages python3-ollama, wasistlos all, elecwhat
