--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20250602~sparky8~0 (2025-06-02)
+-------------------------------------------------------------------------------
+  * updated de locale
+  * added packages meru, speedtest-cli, sparky-package-tool
+  * removed packages gmail-desktop
+  
+-------------------------------------------------------------------------------
   Version 20250525~sparky8~0 (2025-05-25)
 -------------------------------------------------------------------------------
   * changed sparky kernel installation suffix from sparky8 to sparky
