--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20250602~sparky7~0 (2025-06-02)
+-------------------------------------------------------------------------------
+  * updated de locale
+  * added packages meru, speedtest-cli, sparky-package-tool
+  * removed packages gmail-desktop
+
+-------------------------------------------------------------------------------
   Version 20250504~sparky7~0 (2025-05-04)
 -------------------------------------------------------------------------------
   * added package package elecwhat
