--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20250672~sparky7~0 (2025-07-22)
+-------------------------------------------------------------------------------
+  * updated de locale
+  * added liquorix and xanmod kernel installers
+
+-------------------------------------------------------------------------------
   Version 20250602~sparky7~0 (2025-06-02)
 -------------------------------------------------------------------------------
   * updated de locale
