--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20250722~sparky8~0 (2025-07-22)
+-------------------------------------------------------------------------------
+  * updated de locale
+  * updated liquorix and xanmod kernel installers
+
+-------------------------------------------------------------------------------
   Version 20250602~sparky8~0 (2025-06-02)
 -------------------------------------------------------------------------------
   * updated de locale
