--- a/7/CHANGELOG
+++ b/7/CHANGELOG
@@ -1,5 +1,10 @@
 -------------------------------------------------------------------------------
-  Version 20250672~sparky7~0 (2025-07-22)
+  Version 20250812~sparky7~0 (2025-08-12)
+-------------------------------------------------------------------------------
+  * added packages forkgram, birdtray
+
+-------------------------------------------------------------------------------
+  Version 20250722~sparky7~0 (2025-07-22)
 -------------------------------------------------------------------------------
   * updated de locale
   * added liquorix and xanmod kernel installers
