--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------------------
+  Version 20250821~sparky8~0 (2025-08-21)
+-------------------------------------------------------------------------------
+  * updated trinity desktop repos
+  * removed otter-browser
+  * updated virtualbox up to 7.2
+
+-------------------------------------------------------------------------------
   Version 20250812~sparky8~0 (2025-08-12)
 -------------------------------------------------------------------------------
   * added packages incus, forkgram, birdtray
