--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20251022~sparky8~0 (2025-10-22)
+-------------------------------------------------------------------------------
+  * added packages debian kernel backport + rt, badwolf, mousam
+  * removed debian kernel 686
+
+-------------------------------------------------------------------------------
   Version 20250907~sparky8~0 (2025-09-07)
 -------------------------------------------------------------------------------
   * added packages rapid-raw, ungoogled-chromium arm64, ulauncher
