--- a/9/CHANGELOG
+++ b/9/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20251022~sparky9~0 (2025-10-22)
+-------------------------------------------------------------------------------
+  * added packages ukui desktop, mayo, badwolf, mousam
+  * removed debian kernel 686
+
+-------------------------------------------------------------------------------
   Version 20250907~sparky9~0 (2025-09-07)
 -------------------------------------------------------------------------------
   * added packages rapid-raw, ungoogled-chromium arm64, ulauncher
