--- a/9/CHANGELOG
+++ b/9/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20251116~sparky9~0 (2025-11-16)
+-------------------------------------------------------------------------------
+  * added hyprland desktop
+  * removed package forkgram
+
+-------------------------------------------------------------------------------
   Version 20251022~sparky9~0 (2025-10-22)
 -------------------------------------------------------------------------------
   * added packages ukui desktop, mayo, badwolf, mousam
