--- a/9/CHANGELOG
+++ b/9/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20251209~sparky9~0 (2025-12-09)
+-------------------------------------------------------------------------------
+  * added forkgram, xanmod linux kernel LTSv1
+  * removed fagram
+
+-------------------------------------------------------------------------------
   Version 20251116~sparky9~0 (2025-11-16)
 -------------------------------------------------------------------------------
   * added hyprland desktop
