--- a/8/CHANGELOG
+++ b/8/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 20251209~sparky8~0 (2025-12-09)
+-------------------------------------------------------------------------------
+  * added forkgram, xnamod linux kernel LTSv1
+  * removed fagram
+
+-------------------------------------------------------------------------------
   Version 20251022~sparky8~0 (2025-10-22)
 -------------------------------------------------------------------------------
   * added packages debian kernel backport + rt, badwolf, mousam
